# Meta_Hackathon

./: Dockerfile  README.md  curate_dataset.py  curate_out.txt  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_out.txt  tests.py
data/: emails.json
server/: app.py
